tests/golden/expose-plain-appuio/manifests/postgres-oasp-5432-5433-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8ify.ref-slug: oasp
    k8ify.service: postgres
  name: postgres-oasp-5432-5433
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
  - name: "5433"
    port: 5433
    targetPort: 5432
  selector:
    k8ify.ref-slug: oasp
    k8ify.service: postgres
  type: LoadBalancer
status:
  loadBalancer: {}
