tests/golden/expose-plain-appuio/manifests/postgres-oasp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8ify.ref-slug: oasp
    k8ify.service: postgres
  name: postgres-oasp
spec:
  ports:
  - name: "5434"
    port: 5434
    targetPort: 5432
  selector:
    k8ify.ref-slug: oasp
    k8ify.service: postgres
status:
  loadBalancer: {}
